--- a/Gomoku_React/src/components/Header.module.css
+++ b/Gomoku_React/src/components/Header.module.css
@@ -31,7 +31,7 @@
 .title {
     color: #ff6ad2f0;
     height: 100%;
-    margin-top: 1%;
+    margin: 0.5% 0 1% 0;
     text-align: left;
     padding-top: 0.1%;
     padding-left: 3%;
@@ -58,5 +58,5 @@
 }
 
 .gomoku {
-    font-size: 5.5rem;
+    font-size: 5rem;
 }
